objects/GEMS_Custom_ID_Request_Form__c.object
<CustomObject>
    <fields>
        <fullName>RxBin__c</fullName>
        <label>RxBin</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RxGRP__c</fullName>
        <label>RxGRP</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RxPCN__c</fullName>
        <label>RxPCN</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Information__c</fullName>
        <label>Rx Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, with Prime</fullName>
                </value>
                <value>
                    <fullName>Yes, with Carved out Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_one_option_for_phone_numbers_on_t__c</fullName>
        <label>Select one option for phone numbers on t</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Include standard phone numbers?</fullName>
                </value>
                <value>
                    <fullName>Include customized labels/phone numbers?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_one_option_for_the_Back_Text_Mess__c</fullName>
        <label>Select one option for the Back Text Mess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Include standard back messages?</fullName>
                </value>
                <value>
                    <fullName>Include custom back messages?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Re-Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter_Email_ID__c</fullName>
        <description>Email ID of who submits the ID Card. This value id updated from the class &quot;GEMS_Custom_IDRequestFormController&quot;</description>
        <label>Submitter Email ID</label>
        <type>Email</type>
    </fields>
    <label>GEMS Custom ID Request Form</label>
    <nameField>
        <displayFormat>CIR-{00000}</displayFormat>
        <label>Custom Request Form ID#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GEMS Custom ID Request Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>